--- a/index.html
+++ b/index.html
@@ -3,9 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style/index.css">
+    <title>Kevin Lam</title>
 </head>
+
 <body>
-    
+    <header>
+        <p>Kevin Lam</p>
+
+        <nav>
+            <a href="">Home</a>
+            <a href="">About</a>
+            <a href="">Contact</a>
+            <a href="">Projects</a>
+        </nav>
+    </header>
+   
+<section>
+    <div>
+        <h1>Kevin Lam</h1>
+        <a href="">My Projects</a>
+    </div>
+</section>
+
+
+
+
+
 </body>
 </html>
