Non functional rough draft finished

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+
     <header>
         <p>Kevin Lam</p>
 
@@ -19,14 +20,46 @@
         </nav>
     </header>
    
-<section>
+<section id="banner">
     <div>
         <h1>Kevin Lam</h1>
         <a href="">My Projects</a>
     </div>
 </section>
 
+<section id="showcase">
+    <div class="container">
+        <div>
+            <img src="/images/web pic.jpeg" alt="">
+            <p>Title of project</p>
+        </div>
+        <div>
+            <img src="/images/web pic.jpeg" alt="">
+            <p>Title of project</p>
+        </div>
+        <div>
+            <img src="/images/web pic.jpeg" alt="">
+            <p>Title of project</p>
+        </div>
+        <div>
+            <img src="/images/web pic.jpeg" alt="">
+            <p>Title of project</p>
+        </div>
+        <div>
+            <img src="/images/web pic.jpeg" alt="">
+            <p>Title of project</p>
+        </div>
+        <div>
+            <img src="/images/web pic.jpeg" alt="">
+            <p>Title of project</p>
+        </div>
+    </div>
+</section>
 
+
+<footer>
+    <a href="">Contact Me</a>
+</footer>
 
 
 
