updated pictures, animations added

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 <body>
 
     <header>
-        <p>Kevin Lam</p>
+        <a id="logo" href="/index.html"><p>Kevin Lam</p></a>
 
         <nav>
-            <a href="">Home</a>
-            <a href="">About</a>
-            <a href="">Contact</a>
-            <a href="">Projects</a>
+            <a href="#">Home</a>
+            <a href="/about.html">About</a>
+            <a href="contact.html">Contact</a>
+            <a href="projects.html">Projects</a>
         </nav>
     </header>
    
@@ -34,23 +34,23 @@
             <p>Title of project</p>
         </div>
         <div>
-            <img src="/images/web pic.jpeg" alt="">
+            <img src="/images/2.jpeg" alt="">
             <p>Title of project</p>
         </div>
         <div>
-            <img src="/images/web pic.jpeg" alt="">
+            <img src="/images/3.jpeg" alt="">
             <p>Title of project</p>
         </div>
         <div>
-            <img src="/images/web pic.jpeg" alt="">
+            <img src="/images/4.jpeg" alt="">
             <p>Title of project</p>
         </div>
         <div>
-            <img src="/images/web pic.jpeg" alt="">
+            <img src="/images/5.jpeg" alt="">
             <p>Title of project</p>
         </div>
         <div>
-            <img src="/images/web pic.jpeg" alt="">
+            <img src="/images/6.jpeg" alt="">
             <p>Title of project</p>
         </div>
     </div>
