--- a/about.html
+++ b/about.html
@@ -3,9 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="icon" href="/images/favicon-16x16.png">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css" rel="stylesheet" >
+    <link rel="stylesheet" href="style/index.css">
+    <title>Kevin Lam</title>
 </head>
+
 <body>
-    <h1> ABOUT </h1>
+
+    <header>
+        <a id="logo" href="/index.html"><p><i class="fa fa-laptop-code"></i> Kevin Lam</p></a>
+
+        <nav>
+            <a href="/index.html">Home</a>
+            <a href="#" class="active">About</a>
+            <a href="contact.html">Contact</a>
+            <a href="projects.html">Projects</a>
+        </nav>
+    </header>
+   
+
+
+
+    <footer>
+        <a id="contact-button" href="/contact.html">Contact Me</a>
+        <div>
+            <a href="https://www.linkedin.com/in/kevin-lam-8729281a3/" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <a href="https://github.com/KevinLam2980" target="_blank"><i class="fab fa-github"></i></a>
+            <a href="https://twitter.com/kevinlam_2980" target="_blank"><i class="fab fa-twitter-square"></i></a>
+        </div>
+    </footer>
+
+
 </body>
 </html>
