--- a/index.html
+++ b/index.html
@@ -73,16 +73,15 @@
 </section>
 
 
+
 <footer>
     <a id="contact-button" href="/contact.html">Contact Me</a>
     <div>
-        <a href="#"><i class="fab fa-linkedin"></i></a>
-        <a href="#"><i class="fab fa-github"></i></a>
-        <a href="#"><i class="fab fa-twitter-square"></i></a>
+        <a href="https://www.linkedin.com/in/kevin-lam-8729281a3/" target="_blank"><i class="fab fa-linkedin"></i></a>
+        <a href="https://github.com/KevinLam2980" target="_blank"><i class="fab fa-github"></i></a>
+        <a href="https://twitter.com/kevinlam_2980" target="_blank"><i class="fab fa-twitter-square"></i></a>
     </div>
 </footer>
-
-
 
 </body>
 </html>
