alt descriptions added for images

--- a/index.html
+++ b/index.html
@@ -34,37 +34,37 @@
     <div class="container">
         <a href="#">
             <div>
-                <img src="/images/web pic.jpeg" alt="">
+                <img src="/images/web pic.jpeg" alt="Modern chair in front of minimalistic wooden table with macbook pro.">
                 <p>Title of project</p>
             </div>
         </a>
         <a href="#">
             <div>
-                <img src="/images/2.jpeg" alt="">
+                <img src="/images/2.jpeg" alt="Orange sunset seeping over a palm of a hand.">
                 <p>Title of project</p>
             </div>
         </a>
         <a href="#">
             <div>
-                <img src="/images/3.jpeg" alt="">
+                <img src="/images/3.jpeg" alt="Rocks in mid air from a pair of boots">
                 <p>Title of project</p>
             </div>
         </a>
       <a href="#">
         <div>
-            <img src="/images/4.jpeg" alt="">
+            <img src="/images/4.jpeg" alt="People on their phones while at the beach">
             <p>Title of project</p>
         </div>
       </a>
      <a href="#">
         <div>
-            <img src="/images/5.jpeg" alt="">
+            <img src="/images/5.jpeg" alt="man standing between a canyon">
             <p>Title of project</p>
         </div>
      </a>
      <a href="#">
         <div>
-            <img src="/images/6.jpeg" alt="">
+            <img src="/images/6.jpeg" alt="Black lives matter protest">
             <p>Title of project</p>
         </div>
      </a>
